@@ -6,8 +6,11 @@ build_requires:
   Dist::Zilla::Plugin::GatherDir: '0'
   Dist::Zilla::PluginBundle::Basic: '0'
   Dist::Zilla::PluginBundle::Classic: '0'
+  Dist::Zilla::Role::Plugin: '0'
+  Dist::Zilla::Role::PluginBundle: '0'
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
+  Moose: '0'
   Test::More: '0.89'
   Test::Warnings: '0'
   perl: '5.006'
