@@ -58,12 +58,15 @@
       "Dist::Zilla::PluginBundle::Author::KENTNL" : "2.025010",
       "Dist::Zilla::PluginBundle::Basic" : "5.042",
       "Dist::Zilla::PluginBundle::Classic" : "5.042",
+      "Dist::Zilla::Role::Plugin" : "5.042",
+      "Dist::Zilla::Role::PluginBundle" : "5.042",
       "Dist::Zilla::Util" : "5.042",
       "English" : "1.09",
       "ExtUtils::MakeMaker" : "7.10",
       "File::Spec" : "3.60",
       "Module::Runtime" : "0.014",
       "Moo" : "2.000002",
+      "Moose" : "2.1604",
       "Pod::Coverage::TrustPod" : "0.100003",
       "Software::License::Perl_5" : "0.103010",
       "Test::CPAN::Changes" : "0.400002",
