@@ -95,14 +95,18 @@ do { my $x = {
                    'recommends' => {
                                      'CPAN::Meta' => '2.120900',
                                      'ExtUtils::MakeMaker' => '7.00',
+                                     'Moose' => '2.000',
                                      'Test::More' => '0.99'
                                    },
                    'requires' => {
                                    'Dist::Zilla::Plugin::GatherDir' => '0',
                                    'Dist::Zilla::PluginBundle::Basic' => '0',
                                    'Dist::Zilla::PluginBundle::Classic' => '0',
+                                   'Dist::Zilla::Role::Plugin' => '0',
+                                   'Dist::Zilla::Role::PluginBundle' => '0',
                                    'ExtUtils::MakeMaker' => '0',
                                    'File::Spec' => '0',
+                                   'Moose' => '0',
                                    'Test::More' => '0.89',
                                    'Test::Warnings' => '0',
                                    'perl' => '5.006'
